--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@headlessui/vue": "^0.2.0",
         "@inertiajs/inertia": "^0.8.2",
         "@inertiajs/inertia-vue3": "^0.3.4",
+        "@inertiajs/progress": "^0.2.4",
         "@tailwindcss/typography": "^0.3.0",
         "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^10.0.2",
