add interact for canvas window

--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
         "@inertiajs/inertia": "^0.8.2",
         "@inertiajs/inertia-vue3": "^0.3.4",
         "@inertiajs/progress": "^0.2.4",
+        "@interactjs/actions": "^1.10.2",
+        "@interactjs/auto-start": "^1.10.2",
+        "@interactjs/inertia": "^1.10.2",
+        "@interactjs/interact": "^1.10.2",
+        "@interactjs/modifiers": "^1.10.2",
         "@tailwindcss/typography": "^0.3.0",
         "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
-        "client-side-python-runner": "^1.2.4",
         "codemirror": "^5.59.1",
         "debounce": "^1.2.0",
         "dedent": "^0.7.0",
