--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@interactjs/inertia": "^1.10.2",
         "@interactjs/interact": "^1.10.2",
         "@interactjs/modifiers": "^1.10.2",
+        "@tailwindcss/line-clamp": "^0.2.0",
         "@tailwindcss/typography": "^0.3.0",
         "@vue/compiler-sfc": "^3.0.5",
         "@vueuse/head": "^0.2.3",
