--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/jetstream": "^2.1",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-activitylog": "^3.16",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
