initial POC for comments

--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
         "tailwindcss": "^2.0.1",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.6.0"
     }
 }
