--- a/.env.example
+++ b/.env.example
@@ -45,5 +45,15 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+SCOUT_DRIVER=meilisearch
+SCOUT_QUEUE=false
+
+MEILISEARCH_HOST=http://127.0.0.1:7700
+MEILISEARCH_KEY=
+
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CALLBACK_URL=
